2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Remove 
	unused field (self-test)

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make

2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Simplify 
	logic a bit. Handle the case where Resolve returns null (cannot 
	find the required assemblies)
	* Makefile.am: Rebuild if the framework has changed.

2008-05-24  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Rule.cs: Don't apply rule to GetHashCode
	methods since it's unlikely that the downcast will cause problem
	and this reduce the main source of false-positives.

2008-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Rule.cs: Change Convert method to static
	(self-test).

2008-05-09  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotCastIntPtrToInt32Rule.cs: New. Rule to ensure we're not 
	generating code limiting IntPtr to work on 32bits architectures.
	* Makefile.am: Add rule and test to the build.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Add Equals,
	GetHashCode and ==,!= operators on Branch to satisfy 
	OverrideValueTypeDefaultsRule.
	* UseManagedAlternativesToPInvokeRule.cs: Add Equals(PInvokeCall) 
	method to satisfy ImplementEqualsTypeRule.

2008-02-17  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Change to static
	and initialize it directly.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Fix the case
	where the p/invoke is inside another assembly using the 
	AssemblyResolver.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs
	* MarshalStringsInPInvokeDeclarationsRule.cs
	* PInvokeShouldNotBeVisibleRule.cs